gl31-master/src/test/deca/context/valid/complet/call_string.deca
// Description:
//    Test valide pour complet context
//
// Resultats:
//    Succes
//
// Historique:
//    cree le 20/01/2021
class Test{
    int methInt(){
        int a = 2;
        return a;
    }
}
{
    Test t = new Test();
    print(t.methInt());
}
